Wed Sep  9 10:34:06 1998  Andreas Schwab  <schwab@issan.informatik.uni-dortmund.de>

	* sysdeps/m68k/fpu/bits/mathinline.h (isinf): Avoid conflict with
	C9x macro.

1998-09-08  Ulrich Drepper  <drepper@cygnus.com>

	* csu/initfini.c: Don't define __gmon_start__ if WEAK_GMON_START is
	defined.
	* sysdeps/unix/sysv/linux/i386/Makefile [subdir==csu]: Add
	-DWEAK_GMON_START to CFLAGS-initfini.s.

	* elf/dl-object.c (_dl_new_object): Store map address in
	_dl_loaded if _dl_loaded is NULL.
	* elf/rtld.c (dl_main): Don't update _dl_loaded here.

	* sysdeps/generic/setrlimit64.c: Remove stub warning.

1998-09-07  Ulrich Drepper  <drepper@cygnus.com>

	* db2/common/db_apprec.c (__db_apprec): Add braces to make gcc
	quiet.
	* db2/btree/bt_cursor.c: Likewise.
	* db2/common/db_region.db_c: Likewise.
	* db2/common/db_salloc.db_c: Likewise.
	* db2/db/db.c: Likewise.
	* db2/db/db_rec.c: Likewise.
	* db2/hash/hash.c: Likewise.
	* db2/hash/hash_page.c: Likewise.
	* db2/hash/hash_rec.c: Likewise.
	* db2/log/log_findckp.c: Likewise.
	* db2/log/log_get.c: Likewise.
	* db2/log/log_put.c: Likewise.
	* db2/mp/mp_fget.c: Likewise.
	* db2/mp/mp_fput.c: Likewise.
	* db2/mp/mp_region.c: Likewise.
	* stdlib/strtol.c: Likewise.
	* string/strcoll.c: Likewise.
	* string/strxfrm.c: Likewise.
	* argp/argp-help.c: Likewise.
	* argp/argp-parse.c: Likewise.
	* resolv/res_debug.c: Likewise.

1998-09-07 09:58  Ulrich Drepper  <drepper@cygnus.com>

	* math/tgmath.h (scalb): Only define for __USE_MISC or
	__USE_XOPEN_EXTENDED.  Patch by Zack Weinberg.

1998-09-06  Andreas Schwab  <schwab@issan.informatik.uni-dortmund.de>

	* libio/stdio.h: Fix comment.

	* stdio/stdio.h: Make vfscanf, vscanf and vsscanf available if
	__USE_ISOC9X.

1998-09-06 09:53 -0400  Zack Weinberg  <zack@rabi.phys.columbia.edu>

	* Makeconfig (+gccwarn): Remove -Wno-parentheses.

	* elf/dl-open.c: Quiet -Wparentheses warnings.
	* iconvdata/johab.c: Likewise.
	* iconvdata/uhc.c: Likewise.
	* inet/inet_net.c: Likewise.