@@ -180,8 +180,9 @@ _dl_start_user:
 	lea (%sp, %d0*4), %sp
 	| Push back the modified argument count.
 	move.l %d1, -(%sp)
-0:	| Push _dl_default_scope[2] as argument in _dl_init_next call below.
-	move.l ([_dl_default_scope@GOT.w, %a5], 8), %d2
+0:	| Push the searchlist of the main object as argument in
+	| the _dl_init_next call below.
+	move.l ([_dl_main_searchlist@GOT.w, %a5]), %d2
 0:	move.l %d2, -(%sp)
 	| Call _dl_init_next to return the address of an initializer
 	| function to run.
